[package]
authors = ["Without Boats <boats@mozilla.com>"]
description = "Experimental error handling abstraction."
documentation = "https://docs.rs/failure"
homepage = "https://rust-lang-nursery.github.io/failure/"
license = "MIT OR Apache-2.0"
name = "failure"
repository = "https://github.com/rust-lang-nursery/failure"
version = "0.1.7"

[dependencies.failure_derive]
optional = true
version = "0.1.7"
path = "./failure_derive"

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_backtrace = { git = "https://github.com/baidu/rust-sgx-sdk.git", rev = "v1.0.9", optional = true }
sgx_tstd = { rev = "v1.0.9", git = "https://github.com/baidu/rust-sgx-sdk.git", optional = true }

[workspace]
#members = [".", "failure_derive"]

[features]
default = ["std", "derive"]
#small-error = ["std"]
std = ["sgx_backtrace", "mesalock_sgx"]
derive = ["failure_derive"]
mesalock_sgx = ["sgx_tstd"]
